--- a/index.css
+++ b/index.css
@@ -10,6 +10,49 @@
     /* background-color: black; */
     /* color: white; */
 }
+.sharp{
+    opacity: 0;
+    filter: blur(5px);
+   transform: translateY(-100%);
+  }
+.left{
+    opacity: 0;
+    filter: blur(5px);
+   transform: translateX(-100%);
+  }
+  .show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translate(0);
+   }
+   .dope:nth-child(1){
+    transition-delay:200ms;
+   }   
+   .dope:nth-child(2){
+    transition-delay:400ms;
+
+   }    
+   .dope :nth-child(3){
+    transition-delay:600ms;
+
+   }  
+  .sharpp{
+   opacity: 1;
+   transition: all 1s;
+   filter: blur(0);
+   transform: translateY(0);
+  
+}
+.loki{
+    opacity: 0;
+    filter: blur(5px);
+   transform: translateY(100%);
+  }
+a{
+    color:black;
+    text-decoration:none;
+    font-weight:bold;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -18,6 +61,8 @@ nav{
     justify-content: space-between;
     /* overflow: hidden; */
     align-items: center;
+  
+    
 }
 .photography{
     text-align: center;
@@ -60,7 +105,10 @@ line-height: -3px;
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
-
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    padding: 0 1rem;
 }
 .nav2 span{
     cursor: pointer;
@@ -92,6 +140,7 @@ color: #FF4206;
     font-size: 24px;
 }
 
+
 .cont2-col{
     padding-left:  8rem;
     /* margin: ; */
@@ -114,7 +163,7 @@ color: #FF4206;
 .letstalk-button{
     background-color: #FF4206 !important;
     filter:drop-shadow(37.5px);
-    padding: 0.7rem 4rem;
+    padding: 0.7rem 3rem;
     /* margin: 0rem 2rem !important; */
     text-align: center;
 }
