--- a/index.css
+++ b/index.css
@@ -57,10 +57,8 @@ html{
     scroll-behavior: smooth;
 }
 nav{
-    display: flex;
-    justify-content: space-between;
-    /* overflow: hidden; */
-    align-items: center;
+    display: none;
+
   
     
 }
@@ -108,7 +106,11 @@ line-height: -3px;
     position: sticky;
     top: 0;
     z-index: 999;
-    padding: 0 1rem;
+    padding:  1rem;
+    margin-bottom: 2rem;
+}
+.bb{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .nav2 span{
     cursor: pointer;
