--- a/booking.css
+++ b/booking.css
@@ -31,3 +31,14 @@ background-color: #FF4206;
 color: aliceblue;
 cursor: pointer;
 }
+.nav22{
+    display: flex;
+    justify-content: space-between;
+   align-items: center;
+    gap: 2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    padding:  0.3rem 1rem;
+    margin-bottom: 2rem;
+}
